--- a/templates/hello.html
+++ b/templates/hello.html
@@ -8,9 +8,12 @@
 </head>
 <body class="f_box" style="background-color: #2d3a4b">
 <div>
+    <div class="logo">
+        <img class="logo" src="{{ url_for('static', path='/logo.png') }}"/>
+    </div>
 
     <div class="box">
-        <img src="{{ url_for('static', path='/logo.png') }}" class="logo"/>
+
         <h2 class="title2 hi">{{ hi }}</h2>
         <br>
         <h2 class="title2">OpenAPI文档:</h2>
