--- a/templates/hello.html
+++ b/templates/hello.html
@@ -9,7 +9,7 @@
 <body class="f_box" style="background-color: #2d3a4b">
 <div>
     <div class="logo">
-        <img class="logo" src="{{ url_for('static', path='/logo.png') }}"/>
+{#        <img class="logo" src="{{ url_for('static', path='/logo.png') }}"/>#}
     </div>
 
     <div class="box">
