--- a/templates/hello.html
+++ b/templates/hello.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>{{ title }}</title>
-    <link href="{{ url_for('static', path='/style.css') }}" rel="stylesheet">
-    <link rel="shortcut  icon" href="{{ url_for('static', path='/favicon.ico') }}" type="image/x-icon" />
+    <link href="{{ url_for('static', path='/hello/style.css') }}" rel="stylesheet">
+{#    <link rel="shortcut  icon" href="{{ url_for('static', path='/favicon.ico') }}" type="image/x-icon" />#}
 </head>
 <body class="f_box" style="background-color: #2d3a4b">
 <div>
